# DrivingGen

./: README.md  environment.yml
drivinggen/: down_dataset.py  infer_example_wan.py  z-sample_ftd.py  z-sample_fvd.py
drivinggen/func/: extract_traj_agent_unidepth.py  extract_traj_ego_unidepth.py
drivinggen/func/visual_slam/: dataset.py  vo.py
drivinggen/trajs/: traj_alignment.py  traj_consistency.py  traj_distribution.py  traj_quality.py
drivinggen/videos/: p2020.py  p2020_v2.py  video_a_consist.py  video_a_missing.py  video_distribution.py  video_obj_q.py  video_sub_q.py  video_v_consist.py
drivinggen/videos/metrics/: base_metrics.py  lpips_metric.py  ssim_metric.py
scripts/: 0-down_data.sh  1-example_infer_model.sh  2-get_ego_traj.sh  3-get_agent_traj.sh  4-get_video_metrics.sh  5-get_traj_metrics.sh
third_parties/MTR/: requirements.txt  setup.py
third_parties/SEA-RAFT/config/: parser.py
third_parties/cosmos-reason1/: .gitattributes  .gitignore  .link-check.json  .pre-commit-config-base.yaml  .pre-commit-config.yaml  ATTRIBUTIONS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  ruff.toml  run.sh
third_parties/cosmos-reason1/.github/workflows/: pre-commit.yml
third_parties/cosmos-reason1/configs/: export_schemas.py  sampling_params.yaml  vision_config.yaml
third_parties/cosmos-reason1/configs/schemas/: sampling_params.json  (+1 more)
third_parties/cosmos-reason1/cosmos_reason1_utils/: README.md  pyproject.toml
third_parties/cosmos-reason1/examples/benchmark/: README.md  pyproject.toml
third_parties/cosmos-reason1/examples/benchmark/configs/: evaluate.yaml
third_parties/cosmos-reason1/examples/benchmark/tools/eval/: calculate_accuracy.py  evaluate.py  process_raw_data.py
third_parties/cosmos-reason1/examples/benchmark/tools/eval/utils/: dummy_model.py  input.py  model_download.py  output.py
third_parties/cosmos-reason1/examples/post_training/: README.md  justfile  pyproject.toml
third_parties/cosmos-reason1/examples/post_training/configs/: rl.toml  sft.toml
third_parties/cosmos-reason1/examples/post_training/tools/dataset/: cosmos_grpo.py  cosmos_sft.py
third_parties/cosmos-reason1/prompts/: README.md  action_planning.yaml  av.yaml  caption.yaml  driving.yaml  multiple_choice_question.yaml  prompt_upsampler.yaml  question.yaml  robot.yaml  temporal_caption_json.yaml  temporal_caption_text.yaml  temporal_localization.yaml  video_analyzer.yaml  video_critic.yaml
third_parties/cosmos-reason1/scripts/: add_timestamps.py  inference.py  inference_sample.py  quantize_fp8.py
third_parties/samurai/: README.md
third_parties/samurai/scripts/: demo.py  inference.sh  main_inference_chunk.py
third_parties/yolov10/: requirements.txt
(+37 files in other folders)
