# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "cosmos-reason1-benchmark"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "attrs",
    "datasets",
    "ffmpeg-python",
    "huggingface-hub",
    "numpy",
    "opencv-python",
    "pillow",
    "pyyaml",
    "qwen_vl_utils",
    "tensorflow_datasets",
    "torch",
    "tqdm",
    "transformers",
    "vllm",
]

[tool.uv.build-backend]
module-name = ["tools"]
module-root = ""
