# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "cosmos-reason1-post-training"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "cosmos-reason1-utils",
    "cosmos-rl",
    "datasets",
    "toml",
    "torch",
    "torchcodec",
    "transformers",
    "wandb",
]

[dependency-groups]
build = ["torch"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
override-dependencies = ["transformers>=4.53"]

[tool.uv.sources]
cosmos-reason1-utils = { path = "../../cosmos_reason1_utils", editable = true }
cosmos-rl = { git = "https://github.com/nvidia-cosmos/cosmos-rl.git" }
